# ai-topics-2-2025

./: README.md  pyproject.toml
2.tools/: pyproject.toml
2.tools/2.1.fastapi/: csv_characters.py  file_api.py  hello_api.py
2.tools/2.2.docker/complex_service/: Dockerfile  docker-compose.yaml  requirements.txt
2.tools/2.2.docker/simple_service/: Dockerfile  main.py
3.computer_vision/: pyproject.toml
3.computer_vision/3.1.data_preparation/: 3.1.1.operaciones_basicas.ipynb  3.1.4.transformacion_perspectiva.ipynb
3.computer_vision/3.2.training/: 3.2.0.1.tensors.ipynb  3.2.1.train_pytorch_cls.ipynb
3.computer_vision/3.3.deployment/: classification.ipynb
3.computer_vision/3.3.deployment/3.3.1.object_detection_api/: detector.py  main.py  tools.py
3.computer_vision/3.3.deployment/3.3.2.cv_inference_api/: Dockerfile  classification.ipynb  docker-compose.yaml  inference_models.py  main.py  requirements.txt  schemas.py  tools.py
4.llms/4.2.embeddings/: economia.txt
4.llms/4.3.llm/: 4.3.1.openai_api.ipynb
4.llms/4.4.rag/: 4.4.1.2simple_rag_basic.ipynb  4.4.1.simple_rag.ipynb  4.4.2.local_embeddings.ipynb  4.4.3.chat_engine.ipynb  4.4.4.kjarkas.ipynb  4.4.5.kjarkas_agent.ipynb  4.4.6.chroma_db.ipynb  4.4.7.kjarkas_chroma.ipynb  4.4.8.llamaindex_workflow.ipynb  4.4.9.crag.ipynb  CRAG.html  basic_workflow.html  multi_step_workflow.html
4.llms/4.4.rag/local_index/: default__vector_store.json  docstore.json  index_store.json
4.llms/4.4.rag/local_index2/: default__vector_store.json  docstore.json  index_store.json
4.llms/4.6.local_llms/: hello_ollama.ipynb
(+28 files in other folders)
