[project]
name = "ai-topics-2-2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "jupyter>=1.1.1",
    "lightning>=2.5.5",
    "llama-index>=0.10.45.post1",
    "llama-index-embeddings-huggingface>=0.2.3",
    "matplotlib>=3.10.6",
    "mediapipe>=0.10.14",
    "motor>=3.7.1",
    "numpy>=2.3.3",
    "openai>=2.2.0",
    "opencv-python>=4.11.0.86",
    "pandas>=2.3.2",
    "pillow>=11.3.0",
    "pip>=25.2",
    "pycocotools>=2.0.10",
    "scikit-learn>=1.7.2",
    "sentence-transformers>=5.1.1",
    "spacy>=3.8.7",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "transformers>=4.57.0",
    "ultralytics>=8.3.204",
    "wikipedia-api>=0.8.1",
]

[tool.uv.workspace]
members = [
    "2.tools",
    "3.computer_vision",
]
